# iroun.photos

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/base_app/: settings.py  urls.py
api/common/templates/: footer.html  header.html
api/core/: asgi.py  settings.py  wsgi.py
api/gallery/: admin.py  admin_views.py  helpers.py  models.py  serializers.py  urls.py  views.py
api/gallery/migrations/: 0001_initial.py  0003_alter_album_cover.py  0005_album_slug.py  0007_alter_event_albums_alter_event_slug_and_more.py  0008_album_date.py  0009_album_description.py
api/pages/: urls.py
api/pages/templates/: contact.html
nginx/: nginx.conf
web/: .dockerignore  .env.sample  Dockerfile  dev.Dockerfile  next.config.js  nginx.conf  package-lock.json  package.json  prod.Dockerfile  tailwind.config.ts  tsconfig.json
web/base_app/: asgi.py  settings.py  urls.py  wsgi.py
web/common/: models.py
web/common/templates/: base.html  footer_scripts.html  header.html  index.html
web/gallery/: admin.py  helpers.py  models.py  urls.py  views.py
web/gallery/migrations/: 0001_initial.py  0002_album_cover.py  0002_alter_album_cover.py  0003_album_published_photo_visible_alter_photo_file.py  0004_alter_album_cover.py  0004_photo_thumbnail.py  0005_remove_album_cover_albumcover.py  0006_person_location_event.py  0006_remove_albumcover_created_at_and_more.py  0007_album_cover_delete_albumcover.py
web/pages/: urls.py
web/pages/templates/: 404.html  about.html  (+3 more)
web/static/: style.css
web/web/: settings.py
(+26 files in other folders)
